# ML-Conflicto-Internacional

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json
dashboard/src/app/: page.tsx
docs/: DATABASES.md
material de apoyo/: ml1-enunciado-osint-externado.md
scripts/: graficar_opensky.py  test_opensky.py
src/features/: build_features.py
src/ingestion/: acled_client.py  bluesky_client.py  gdelt_client.py  opensky_client.py  opensky_historical.py  rss_client.py
src/models/: train.py
src/processing/: normalize.py
